--- a/test/test.html
+++ b/test/test.html
@@ -38,9 +38,23 @@
 							"\n\tht.dateDiffStr(new Date(2000,1,3,4,5,6),new Date(2000,1,4,5,6,7),1)==='1d 1h 1m'",
 		"addCssText()":	"ht.addCssText('#divResult3{height:200px}');\n"+
 						"ht('divResult3').offsetHeight===200;",
-		"addCssText()/styleId":	"ht.addCssText('#divResult3 span{background:yellow;}','myStyle1');\n"+
-						"ht('divResult3').innerHTML='<span>aaa</span> <span>bbb</span>';\n"+
-						"\"<span class='ht-cmd' onclick=\\\"ht('myStyle1').textContent='#divResult3 span{background:red;}'\\\">red</span> <span class='ht-cmd'  onclick=\\\"ht('myStyle1').textContent='#divResult3 span{background:blue;}'\\\">blue</span>\"",
+		"addCssText()/styleId":	"ht.addCssText('#divResult3 span.si{background:yellow;}','myStyle1');\n"+
+						"ht('divResult3').innerHTML='<span class=si>aaa</span> <span class=si>bbb</span>';\n"+
+						"\"<span class='ht-cmd' onclick=\\\"ht('myStyle1').textContent='#divResult3 span.si{background:red;}'\\\">red</span> <span class='ht-cmd'  onclick=\\\"ht('myStyle1').textContent='#divResult3 span.si{background:blue;}'\\\">blue</span>\"",
+		"querySelectorByAttr()":
+						"ht('divResult3').innerHTML='<span myattr=11>aaa</span> <span myattr=22>bbb</span> <b myattr=22>ccc</b> <b myattr=22>ddd</b>';\n"+
+						"ht.querySelectorByAttr('divResult3','','myattr').getAttribute('myattr')==='11' && \n" +
+						"ht.querySelectorByAttr('divResult3','','myattr','22').textContent==='bbb' && \n" +
+						"ht.querySelectorByAttr('divResult3','b','myattr','22').textContent==='ccc' && \n" +
+						"ht.querySelectorByAttr('divResult3','b','myattr','22',':nth-of-type(2)').textContent==='ddd'  \n" 
+						,
+		"queryByName()":
+						"ht('divResult3').innerHTML='<span name=a>aaa</span> <span name=b>bbb <b name=c>ccc</b> <b name=a>aaa2</b></span>';\n"+
+						"ht.queryByName('divResult3','a').textContent==='aaa' && \n" +
+						"ht.queryByName('divResult3','c').textContent==='ccc' && \n" +
+						"ht.queryByName('divResult3','b','c').textContent==='ccc' && \n" +
+						"ht.queryByName('divResult3','b','a').textContent==='aaa2' \n" 
+						,
 		"getSearchPart()":	"ht.getSearchPart('a','?aa=1&a=2') ==='2' && \n" +
 							"ht.getSearchPart('aa','?aa=1&a=2') ==='1' && \n" +
 							"ht.getSearchPart('a','?aa=1&a=2&cc=3') ==='2' && \n" +
