--- a/test/test.html
+++ b/test/test.html
@@ -41,6 +41,14 @@
 		"addCssText()/styleId":	"ht.addCssText('#divResult3 span.si{background:yellow;}','myStyle1');\n"+
 						"ht('divResult3').innerHTML='<span class=si>aaa</span> <span class=si>bbb</span>';\n"+
 						"\"<span class='ht-cmd' onclick=\\\"ht('myStyle1').textContent='#divResult3 span.si{background:red;}'\\\">red</span> <span class='ht-cmd'  onclick=\\\"ht('myStyle1').textContent='#divResult3 span.si{background:blue;}'\\\">blue</span>\"",
+		"appendHtml()":
+						"var a=ht.appendHtml('divResult3','<span>aa</span> <span>bb</span> ');\n"+
+						"a.textContent=='aa' \n"
+						,
+		"appendBodyHtml()":
+						"var a=ht.appendBodyHtml('<span>aa</span> <span>bb</span> ');\n"+
+						"a.textContent=='aa' \n"
+						,
 		"querySelectorByAttr()":
 						"ht('divResult3').innerHTML='<span myattr=11>aaa</span> <span myattr=22>bbb</span> <b myattr=22>ccc</b> <b myattr=22>ddd</b>';\n"+
 						"ht.querySelectorByAttr('divResult3','','myattr').getAttribute('myattr')==='11' && \n" +
