--- a/test/test.html
+++ b/test/test.html
@@ -35,7 +35,9 @@
 		"dateString19()": "ht.dateString19(new Date(2000,1,3,4,5,6))==='2000-02-03 04:05:06'",
 		"dateString14()": "ht.dateString14(new Date(2000,1,3,4,5,6))==='20000203040506'",
 		"dateDiffStr()": "ht.dateDiffStr(new Date(2000,1,3,4,5,6),new Date(2000,1,4,5,6,7))==='1天1时1分' &&" +
-							"\n\tht.dateDiffStr(new Date(2000,1,3,4,5,6),new Date(2000,1,4,5,6,7),1)==='1d 1h 1m'",
+							"\n\tht.dateDiffStr(new Date(2000,1,3,4,5,6),new Date(2000,1,4,5,6,7),1)==='1d 1h 1m' &&"+
+							"\n\tht.dateDiffStr(new Date(2000,1,4,5,6,7),new Date(2000,1,3,4,5,6))==='-1天1时1分' &&" +
+							"\n\tht.dateDiffStr(new Date(2000,1,4,5,6,7),new Date(2000,1,3,4,5,6),1)==='-1d 1h 1m'",
 		"addCssText()":	"ht.addCssText('#divResult3{height:200px}');\n"+
 						"ht('divResult3').offsetHeight===200;",
 		"addCssText()/styleId":	"ht.addCssText('#divResult3 span.si{background:yellow;}','myStyle1');\n"+
